--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-horizontal-scrolling-menu": "^3.2.3",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0"
