--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.2.1",
     "eslint": "8.27.0",
@@ -23,9 +24,11 @@
     "popmotion": "^11.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.3",
     "react-horizontal-scrolling-menu": "^3.2.3",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "yup": "^0.32.11"
   }
 }
